--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "WeChat",
+  "name": "w",
   "version": "1.0.0",
   "description": "",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node -- ./src/app.js",
-    "dev": "nodemon --watch server/**/*.ts --exec ts-node ./server/index.ts",
+    "dev": "nodemon --watch src/**/*.ts --exec ts-node ./src/index.ts",
+    "ws:dev": "nodemon --watch src/socket/**/*.ts --exec ts-node ./src/socket/index.ts",
     "clean": "rm -rf ./build/*",
-    "build": "tsc"
+    "build": "yarn clean && tsc",
+    "build:exe": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "bluebird": "^3.5.2",
+    "cheerio": "^1.0.0-rc.2",
     "consola": "^2.3.0",
     "dayjs": "^1.7.8",
     "eventemitter3": "^3.1.0",
@@ -30,6 +33,8 @@
     "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
     "mongoose": "^5.4.0",
+    "ms": "^2.1.1",
+    "node-schedule": "^1.3.1",
     "nodemon": "^1.18.4",
     "qrcode-terminal": "^0.12.0",
     "qs": "^6.6.0",
@@ -42,6 +47,8 @@
     "xml-js": "^1.6.8"
   },
   "devDependencies": {
-    "ts-node": "^7.0.1"
+    "nexe": "^3.0.0-beta.14",
+    "ts-node": "^7.0.1",
+    "type-is": "^1.6.16"
   }
 }
